<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triage 207</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="file_error">File error</string>

    <!-- Login activity -->
    <string name="title_activity_login">Login</string>
    <string name="action_register">Register</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="empty_fields">Please fill in all fields</string>
    <string name="login_error_pass">Password is incorrect</string>
    <string name="login_error_user">User does not exist</string>

    <!-- Register activity -->
    <string name="title_activity_register">Register</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="register_password_mismatch">Passwords do not match</string>
    <string name="register_choose_type">Please select a user type</string>
    <string name="nurse">Nurse</string>
    <string name="physician">Physician</string>

    <!-- Main (patients list) activity -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search patients</string>
    <string name="action_add">Add Patient</string>
    <string name="action_save">Save data</string>
    <string name="action_signout">Sign out</string>
    <string name="patients_saved">Patient database saved</string>
    <string name="empty_list">No patient records to display</string>

    <!-- New Patient activity -->
    <string name="title_activity_new_patient">New Patient</string>
    <string name="action_vitals">Record vitals</string>
    <string name="action_symptoms">Record symptoms</string>
    <string name="action_doctor">Record doctor visit</string>
    <string name="action_prescription">Record prescription</string>
    <string name="new_prompt">Patient data</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="healthcard">Health card number</string>
    <string name="dob">Date of birth</string>
    <string name="new_time">Time: </string>
    <string name="patient_exists">Patient already exists in database</string>
    <string name="patient_added">Patient successfully added to database</string>

    <!-- Patient activity -->
    <string name="title_activity_patient">Patient Data</string>
    <string name="action_add_record">+</string>
    <string name="empty">\nNo records to display\n</string>
    <string name="arrival_head">Arrival time</string>
    <string name="urgency_head">Urgency</string>
    <string name="improving_head">Improving</string>
    <string name="vitals_head">Vitals</string>
    <string name="symptoms_head">Symptoms</string>
    <string name="doctor_head">Doctor visits</string>
    <string name="prescription_head">Prescriptions</string>

    <!-- Search results -->
    <string name="title_activity_search_results">Search Results</string>

    <!-- Vitals activity -->
    <string name="title_activity_vitals">Record Vitals</string>
    <string name="action_accept_vitals">Update Vitals</string>
    <string name="temperature_head">Temperature (°C)</string>
    <string name="temperature">Temperature</string>
    <string name="blood_pressure_head">Blood pressure (mmHg)</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="heart_rate_head">Heart rate (bpm)</string>
    <string name="heart_rate">Heart rate</string>

    <!-- Prescription activity -->
    <string name="title_activity_prescription">Record Prescription</string>
    <string name="action_accept_prescription">Update Prescription</string>
    <string name="prescription_description_head">Add Prescription</string>
    <string name="medication">Medication</string>
    <string name="instructions">Instructions</string>

    <!-- Symptoms activity -->
    <string name="title_activity_symptoms">Record Symptoms</string>
    <string name="action_accept_symptoms">Update Symptoms</string>
    <string name="symptoms_description_head">Symptoms</string>
    <string name="symptoms">Descriptions</string>
    <string name="equals_error">Cannot have \'=\' signs</string>

</resources>