<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.echeung.triage207.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="ifRoom"
        android:title="@string/action_save"/>

</menu>